--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <button onclick="compute()">Compute Interest</button>
         <span id="result"></span><br/>
-          <footer>Everyone Can Get Rich</footer>
+          <footer>&#169;Everyone Can Get Rich</footer>
         </div>
     </body>
   
