--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body >
         <div class=maindiv>
         <h1>Simple Interest Calculator</h1>
-
-        Amount <input type="number"  id="principal">  <br/>
-        Interest Rate <input type="range" min=1 max=20 step=0.25  id="rate" oninput="readRange()"> 
-        <span>10.25%</span><br>
-        No. of Years <select id="years">
+        <table>
+        <tr><td>Amount</td><td> <input type="number"  id="principal"> </td></tr>
+        <tr><td>Interest Rate</td><td> <input type="range" min=1 max=20 step=0.25  id="rate" oninput="readRange()"> <span>10.25%</span></td></tr>
+         <tr><td>No. of Years </td><td>
+        <select id="years">
 <option value=1> 1</option>
 <option value=2> 2</option>
 <option value=3> 3</option>
@@ -24,12 +24,12 @@
 <option value=9> 9</option>
 <option value=10> 10</option>
 
-        </select>  <br/>
-        Interest : <span></span><br>
-
+        </select> </td></tr>
+          <tr><td colspan=2> 
         <button onclick="compute()">Compute Interest</button>
-        <span id="result"></span><br/>
-          <footer>&#169;Everyone Can Get Rich</footer>
+            <tr><td colspan=2>
+        <span id="result"></span>
+         <tr><td colspan=2>&#169;Everyone Can Get Rich</footer>
         </div>
     </body>
   
