--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body >
         <div class=maindiv>
         <h1>Simple Interest Calculator</h1>
+        <!-- added table to align labels and fields-->
         <table>
         <tr><td>Amount</td><td> <input type="number"  id="principal"> </td></tr>
         <tr><td>Interest Rate</td><td> <input type="range" min=1 max=20 step=0.25  id="rate" oninput="readRange()"> <span>10.25%</span></td></tr>
@@ -28,8 +29,10 @@
           <tr><td colspan=2> 
         <button onclick="compute()">Compute Interest</button>
             <tr><td colspan=2>
-        <span id="result"></span>
-         <tr><td colspan=2>&#169;Everyone Can Get Rich</footer>
+        <span id="result"></span></td></tr>
+         <tr><td colspan=2>&#169;Everyone Can Get Rich</footer></td>
+            </tr>
+            </table>
         </div>
     </body>
   
