--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Simple Interest Calculator</title>
+        <title>Web App – Simple Interest Calculator</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
@@ -10,7 +10,7 @@
         <h1>Simple Interest Calculator</h1>
         <!-- added table to align labels and fields-->
         <table>
-        <tr><td>Amount</td><td> <input type="number"  id="principal"> </td></tr>
+        <tr><td>Amount</td><td> <input type="number"  id="principal" min=1> </td></tr>
         <tr><td>Interest Rate</td><td> <input type="range" min=1 max=20 step=0.25  id="rate" oninput="readRange()"> <span>10.25%</span></td></tr>
          <tr><td>No. of Years </td><td>
         <select id="years">
